--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "postinstall": "bower install"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
@@ -16,5 +17,16 @@
     "q": "^1.0.1",
     "request": "^2.47.0",
     "serve-favicon": "~2.1.3"
+  },
+  "devDependencies": {
+    "bower": "^1.3.12",
+    "grunt": "~0.4.5",
+    "grunt-contrib-compass": "~0.9.0",
+    "grunt-contrib-sass": "~0.8.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-develop": "~0.4.0",
+    "load-grunt-tasks": "~0.6.0",
+    "request": "~2.36.0",
+    "time-grunt": "~0.3.2"
   }
 }
