--- a/.bowerrc
+++ b/.bowerrc
@@ -1,4 +1,9 @@
 {
   "directory": "public/components",
-  "json": "bower.json"
+  "json": "bower.json",
+    "storage": {
+        "packages": ".bower-cache",
+        "registry": ".bower-registry"
+    },
+    "tmp": ".bower-tmp"
 }
