--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.9.0",
     "jade": "~1.6.0",
     "morgan": "~1.3.0",
+    "proxy-middleware": "^0.7.0",
     "q": "^1.0.1",
     "request": "^2.47.0",
     "serve-favicon": "~2.1.3",
