--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "q": "^1.0.1",
     "request": "^2.47.0",
     "serve-favicon": "~2.1.3",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "underscore": "^1.7.0"
   },
   "devDependencies": {
     "bower": "^1.3.12",
