--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.9.0",
     "i18n": "^0.5.0",
     "jade": "~1.6.0",
+    "moment": "^2.8.3",
     "morgan": "~1.3.0",
     "proxy-middleware": "^0.7.0",
     "q": "^1.0.1",
