--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "morgan": "~1.3.0",
     "proxy-middleware": "^0.7.0",
     "q": "^1.0.1",
+    "react": "^0.12.1",
+    "react-router": "^0.10.2",
+    "reflux": "^0.1.15",
     "request": "^2.47.0",
     "serve-favicon": "~2.1.3",
     "swig": "^1.4.2",
@@ -25,11 +28,14 @@
   },
   "devDependencies": {
     "bower": "^1.3.12",
+    "browserify": "^6.3.2",
     "grunt": "~0.4.5",
+    "grunt-browserify": "^3.2.0",
     "grunt-contrib-compass": "~0.9.0",
     "grunt-contrib-sass": "~0.8.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-develop": "~0.4.0",
+    "grunt-react": "^0.10.0",
     "grunt-wiredep": "^1.9.0",
     "load-grunt-tasks": "~0.6.0",
     "request": "~2.36.0",
