--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "debug": "~2.0.0",
     "ejs": "^1.0.0",
     "express": "~4.9.0",
+    "express-state": "^1.2.0",
+    "flux-router-component": "^0.4.3",
+    "fluxible-app": "^0.1.1",
+    "fluxible-plugin-routr": "^0.2.0",
     "i18n": "^0.5.0",
     "jade": "~1.6.0",
     "morgan": "~1.3.0",
+    "node-jsx": "^0.12.0",
     "proxy-middleware": "^0.7.0",
     "q": "^1.0.1",
     "react": "^0.12.1",
     "react-router": "^0.10.2",
-    "reflux": "^0.1.15",
     "request": "^2.47.0",
     "serve-favicon": "~2.1.3",
+    "superagent": "^0.21.0",
     "swig": "^1.4.2",
     "underscore": "^1.7.0"
   },
