--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^0.10.2",
     "request": "^2.47.0",
     "serve-favicon": "~2.1.3",
+    "set-cookie": "0.0.4",
     "superagent": "^0.21.0",
     "swig": "^1.4.2",
     "underscore": "^1.7.0"
