--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "grunt-contrib-watch": "~0.6.1",
     "grunt-develop": "~0.4.0",
     "grunt-react": "^0.10.0",
+    "grunt-watchify": "^0.1.0",
     "grunt-wiredep": "^1.9.0",
     "load-grunt-tasks": "~0.6.0",
     "request": "~2.36.0",
