--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "serve-favicon": "~2.1.3",
     "set-cookie": "0.0.4",
     "superagent": "^0.21.0",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.12",
