--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "proxy-middleware": "^0.7.0",
     "q": "^1.0.1",
     "react": "^0.12.1",
+    "react-bootstrap": "^0.13.0",
     "react-intl": "^1.0.1",
     "react-router": "^0.10.2",
     "request": "^2.47.0",
