--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "node-jsx": "^0.12.0",
     "proxy-middleware": "^0.7.0",
     "q": "^1.0.1",
+    "qs": "^2.3.3",
     "react": "^0.12.1",
+    "react-infinite-scroll-mixin": "^0.1.3",
     "react-intl": "^1.0.1",
     "react-router": "^0.10.2",
     "request": "^2.47.0",
