--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./server.js",
-    "postinstall": "bower install"
+    "postinstall": "bower install && grunt watchify"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
@@ -17,6 +17,9 @@
     "flux-router-component": "^0.4.3",
     "fluxible-app": "^0.1.1",
     "fluxible-plugin-routr": "^0.2.0",
+    "grunt-browserify": "^3.2.1",
+    "grunt-cli": "^0.1.13",
+    "grunt-watchify": "^0.1.0",
     "i18n": "^0.5.0",
     "intl": "^0.1.4",
     "jade": "~1.6.0",
@@ -28,8 +31,8 @@
     "q": "^1.0.1",
     "qs": "^2.3.3",
     "react": "^0.12.1",
-    "react-infinite-scroll-mixin": "^0.1.3",
     "react-bootstrap": "^0.13.0",
+    "react-infinite-scroll-mixin": "^0.1.3",
     "react-intl": "^1.0.1",
     "react-router": "^0.10.2",
     "request": "^2.47.0",
