--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./server.js",
     "postinstall": "npm run bower && npm run build",
     "bower": "bower install",
-    "build": "grunt watchify"
+    "build": "grunt browserify"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
@@ -42,7 +42,19 @@
     "set-cookie": "0.0.4",
     "superagent": "^0.21.0",
     "swig": "^1.4.2",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "grunt": "~0.4.5",
+    "grunt-browserify": "^3.2.0",
+    "grunt-contrib-compass": "~0.9.0",
+    "grunt-contrib-sass": "~0.8.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-develop": "~0.4.0",
+    "grunt-react": "^0.10.0",
+    "grunt-watchify": "^0.1.0",
+    "grunt-wiredep": "^1.9.0",
+    "load-grunt-tasks": "~0.6.0",
+    "request": "~2.36.0",
+    "time-grunt": "~0.3.2"
   },
   "devDependencies": {
     "bower": "^1.3.12",
