--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "start": "node ./server.js",
     "postinstall": "npm run bower && npm run build",
     "bower": "bower install",
-    "build": "grunt browserify"
+    "build": "browserify client.js -o public/build/js/app.js"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
     "bower": "^1.3.12",
+    "browserify": "^7.0.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "ejs": "^1.0.0",
@@ -19,12 +20,10 @@
     "flux-router-component": "^0.4.3",
     "fluxible-app": "^0.1.1",
     "fluxible-plugin-routr": "^0.2.0",
-    "grunt-browserify": "^3.2.1",
-    "grunt-cli": "^0.1.13",
-    "grunt-watchify": "^0.1.0",
     "i18n": "^0.5.0",
     "intl": "^0.1.4",
     "jade": "~1.6.0",
+    "load-grunt-tasks": "~0.6.0",
     "lodash": "^2.4.1",
     "moment": "^2.8.3",
     "morgan": "~1.3.0",
@@ -37,24 +36,14 @@
     "react-infinite-scroll-mixin": "^0.1.3",
     "react-intl": "^1.0.1",
     "react-router": "^0.10.2",
-    "request": "^2.47.0",
+    "reactify": "^0.17.1",
+    "request": "~2.36.0",
     "serve-favicon": "~2.1.3",
     "set-cookie": "0.0.4",
     "superagent": "^0.21.0",
     "swig": "^1.4.2",
-    "uuid": "^2.0.1",
-    "grunt": "~0.4.5",
-    "grunt-browserify": "^3.2.0",
-    "grunt-contrib-compass": "~0.9.0",
-    "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-develop": "~0.4.0",
-    "grunt-react": "^0.10.0",
-    "grunt-watchify": "^0.1.0",
-    "grunt-wiredep": "^1.9.0",
-    "load-grunt-tasks": "~0.6.0",
-    "request": "~2.36.0",
-    "time-grunt": "~0.3.2"
+    "time-grunt": "~0.3.2",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.12",
@@ -71,5 +60,10 @@
     "load-grunt-tasks": "~0.6.0",
     "request": "~2.36.0",
     "time-grunt": "~0.3.2"
+  },
+  "browserify": {
+    "transform": [
+      "reactify"
+    ]
   }
 }
