--- a/package.json
+++ b/package.json
@@ -20,6 +20,16 @@
     "flux-router-component": "^0.4.3",
     "fluxible-app": "^0.1.1",
     "fluxible-plugin-routr": "^0.2.0",
+    "grunt": "~0.4.5",
+    "grunt-browserify": "^3.2.0",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-compass": "~0.9.0",
+    "grunt-contrib-sass": "~0.8.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-develop": "~0.4.0",
+    "grunt-react": "^0.10.0",
+    "grunt-watchify": "^0.1.0",
+    "grunt-wiredep": "^1.9.0",
     "i18n": "^0.5.0",
     "intl": "^0.1.4",
     "jade": "~1.6.0",
