--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "ejs": "^1.0.0",
+    "envify": "^3.2.0",
     "express": "~4.9.0",
     "express-state": "^1.2.0",
     "flux-router-component": "^0.4.3",
