--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
-    "bootstrap-sass-official": "~3.3.0"
+    "bootstrap-sass-official": "~3.3.0",
+    "typeahead.js": "~0.10.5"
   },
   "resolutions": {
     "jquery": "~2.1.1"
