--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "~4.9.0",
     "express-state": "^1.2.0",
     "flux-router-component": "^0.4.3",
+    "fluxible-app": "^0.1.2",
     "fluxible-plugin-routr": "^0.2.0",
     "grunt": "~0.4.5",
     "grunt-browserify": "^3.2.0",
