--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "grunt-react": "^0.10.0",
     "grunt-watchify": "^0.1.0",
     "grunt-wiredep": "^1.9.0",
+    "imagesnap": "0.0.0",
     "load-grunt-tasks": "~0.6.0",
     "request": "~2.36.0",
     "time-grunt": "~0.3.2"
