--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "jade": "~1.6.0",
     "load-grunt-tasks": "~0.6.0",
     "lodash": "^2.4.1",
-    "moment": "^2.8.3",
+    "moment": "^2.8.4",
+    "moment-range": "^1.0.5",
     "morgan": "~1.3.0",
     "node-jsx": "^0.12.0",
     "proxy-middleware": "^0.7.0",
