--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "~1.8.1",
     "bower": "^1.3.12",
     "browserify": "^7.0.0",
+    "compression": "^1.3.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "ejs": "^1.0.0",
