--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "qs": "^2.3.3",
     "react": "^0.12.1",
     "react-bootstrap": "^0.13.0",
+    "react-google-analytics": "^0.2.0",
     "react-infinite-scroll-mixin": "^0.1.3",
     "react-intl": "^1.0.1",
     "react-router": "^0.10.2",
