--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "grunt-browserify": "^3.2.0",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-compass": "~0.9.0",
-    "grunt-contrib-sass": "~0.8.1",
+    "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-develop": "~0.4.0",
     "grunt-react": "^0.10.0",
@@ -41,6 +41,7 @@
     "moment-range": "^1.0.5",
     "morgan": "~1.3.0",
     "node-jsx": "^0.12.0",
+    "node-sass": "^2.0.0-beta",
     "proxy-middleware": "^0.7.0",
     "q": "^1.0.1",
     "qs": "^2.3.3",
