--- a/package.json
+++ b/package.json
@@ -64,10 +64,12 @@
     "browserify": "^6.3.2",
     "grunt": "~0.4.5",
     "grunt-browserify": "^3.2.0",
+    "grunt-concurrent": "^1.0.0",
     "grunt-contrib-compass": "~0.9.0",
     "grunt-contrib-sass": "~0.8.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-develop": "~0.4.0",
+    "grunt-nodemon": "^0.4.0",
     "grunt-react": "^0.10.0",
     "grunt-watchify": "^0.1.0",
     "grunt-wiredep": "^1.9.0",
