Add locale in routes

--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "envify": "^3.2.0",
     "express": "~4.9.0",
     "express-state": "^1.2.0",
-    "flux-router-component": "^0.4.3",
+    "flux-router-component": "^0.5.8",
     "fluxible": "^0.1.5",
-    "fluxible-plugin-routr": "^0.2.0",
     "grunt": "~0.4.5",
     "grunt-browserify": "^3.2.0",
     "grunt-cli": "^0.1.13",
+    "grunt-concurrent": "^1.0.0",
     "grunt-contrib-compass": "~0.9.0",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-develop": "~0.4.0",
+    "grunt-nodemon": "^0.4.0",
     "grunt-react": "^0.10.0",
     "grunt-watchify": "^0.1.0",
     "grunt-wiredep": "^1.9.0",
@@ -41,7 +42,6 @@
     "moment-range": "^1.0.5",
     "morgan": "~1.3.0",
     "node-jsx": "^0.12.0",
-    "proxy-middleware": "^0.7.0",
     "q": "^1.0.1",
     "qs": "^2.3.3",
     "react": "^0.12.1",
@@ -52,14 +52,13 @@
     "react-router": "^0.10.2",
     "reactify": "^0.17.1",
     "request": "~2.36.0",
+    "routr": "^0.1.0",
     "serve-favicon": "~2.1.3",
     "set-cookie": "0.0.4",
     "superagent": "^0.21.0",
     "swig": "^1.4.2",
     "time-grunt": "~0.3.2",
-    "uuid": "^2.0.1",
-    "grunt-nodemon": "^0.4.0",
-    "grunt-concurrent": "^1.0.0"
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.12",
