--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "body-parser": "~1.8.1",
     "bower": "^1.3.12",
-    "browserify": "^7.0.0",
+    "browserify": "^7.1.0",
     "compression": "^1.3.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
@@ -22,13 +22,15 @@
     "flux-router-component": "^0.4.3",
     "fluxible": "^0.1.5",
     "fluxible-plugin-routr": "^0.2.0",
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
     "grunt-browserify": "^3.2.0",
     "grunt-cli": "^0.1.13",
+    "grunt-concurrent": "^1.0.0",
     "grunt-contrib-compass": "~0.9.0",
-    "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-develop": "~0.4.0",
+    "grunt-exec": "^0.4.6",
+    "grunt-nodemon": "^0.4.0",
     "grunt-react": "^0.10.0",
     "grunt-watchify": "^0.1.0",
     "grunt-wiredep": "^1.9.0",
@@ -41,6 +43,7 @@
     "moment-range": "^1.0.5",
     "morgan": "~1.3.0",
     "node-jsx": "^0.12.0",
+    "node-sass": "^2.0.1",
     "proxy-middleware": "^0.7.0",
     "q": "^1.0.1",
     "qs": "^2.3.3",
@@ -57,26 +60,9 @@
     "superagent": "^0.21.0",
     "swig": "^1.4.2",
     "time-grunt": "~0.3.2",
-    "uuid": "^2.0.1",
-    "grunt-nodemon": "^0.4.0",
-    "grunt-concurrent": "^1.0.0"
+    "uuid": "^2.0.1"
   },
-  "devDependencies": {
-    "bower": "^1.3.12",
-    "browserify": "^6.3.2",
-    "grunt": "~0.4.5",
-    "grunt-browserify": "^3.2.0",
-    "grunt-contrib-compass": "~0.9.0",
-    "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-develop": "~0.4.0",
-    "grunt-react": "^0.10.0",
-    "grunt-watchify": "^0.1.0",
-    "grunt-wiredep": "^1.9.0",
-    "load-grunt-tasks": "~0.6.0",
-    "request": "~2.36.0",
-    "time-grunt": "~0.3.2"
-  },
+  "devDependencies": {},
   "browserify": {
     "transform": [
       "reactify"
