--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "Website",
   "version": "0.0.0",
+  "engines": {
+    "node": "0.10.x"
+  },
   "private": true,
   "scripts": {
     "start": "node ./server.js",
