--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jade": "~1.6.0",
     "load-grunt-tasks": "~0.6.0",
     "lodash": "^2.4.1",
+    "lodash-contrib": "^241.4.14",
     "moment": "^2.8.4",
     "moment-range": "^1.0.5",
     "morgan": "~1.3.0",
@@ -65,7 +66,6 @@
     "swig": "^1.4.2",
     "time-grunt": "~0.3.2",
     "uuid": "^2.0.1"
-
   },
   "devDependencies": {},
   "browserify": {
