--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-router": "^0.10.2",
     "reactify": "^0.17.1",
     "request": "~2.36.0",
+    "robots.txt": "^1.1.0",
     "routr": "^0.1.0",
     "serve-favicon": "~2.1.3",
     "set-cookie": "0.0.4",
