--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "grunt-develop": "~0.4.0",
     "grunt-nodemon": "^0.4.0",
     "grunt-react": "^0.10.0",
-    "grunt-sass": "git://github.com/ghislaindj/grunt-sass",
+    "grunt-sass": "^0.18.0",
     "grunt-watchify": "^0.1.0",
     "grunt-wiredep": "^1.9.0",
     "i18n": "^0.5.0",
