--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "bootstrap-sass-official": "~3.3.0",
     "typeahead.js": "~0.10.5",
     "bootstrap-social": "~4.8.0",
-    "fontawesome": "~4.2.0"
+    "fontawesome": "~4.2.0",
+    "nouislider": "~7.0.10"
   },
   "resolutions": {
     "jquery": "~2.1.1"
