--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-cli": "^0.1.13",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-compass": "~0.9.0",
+    "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-develop": "~0.4.0",
     "grunt-nodemon": "^0.4.0",
