--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node ./server.js",
     "postinstall": "npm run bower && npm run build",
     "bower": "bower install",
-    "build": "grunt browserify"
+    "build": "grunt build"
   },
   "dependencies": {
     "body-parser": "~1.8.1",
