--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Website",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "engines": {
     "node": "0.10.x"
   },
@@ -27,6 +27,7 @@
     "fluxible-plugin-routr": "^0.3.0",
     "grunt": "~0.4.5",
     "grunt-browserify": "^3.2.0",
+    "grunt-bump": "^0.3.0",
     "grunt-cli": "^0.1.13",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-compass": "~0.9.0",
@@ -36,7 +37,7 @@
     "grunt-nodemon": "^0.4.0",
     "grunt-react": "^0.10.0",
     "grunt-sass": "^0.18.0",
-    "grunt-watchify": "^0.1.0",
+    "grunt-watchify": "git://github.com/goodeggs/grunt-watchify#release",
     "grunt-wiredep": "^1.9.0",
     "i18n": "^0.5.0",
     "intl": "^0.1.4",
@@ -44,6 +45,7 @@
     "load-grunt-tasks": "~0.6.0",
     "lodash": "^2.4.1",
     "lodash-contrib": "^241.4.14",
+    "md5": "^1.0.0",
     "moment": "^2.8.4",
     "moment-range": "^1.0.5",
     "morgan": "~1.3.0",
@@ -69,7 +71,8 @@
     "superagent": "^0.21.0",
     "swig": "^1.4.2",
     "time-grunt": "~0.3.2",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "watchify": "^0.10.2"
   },
   "devDependencies": {},
   "browserify": {
