--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "~1.8.1",
     "bower": "^1.3.12",
     "browserify": "^7.1.0",
+    "cloudinary": "^1.1.2",
     "compression": "^1.3.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
@@ -66,7 +67,10 @@
     "uuid": "^2.0.1",
     "watchify": "^0.10.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "coffeeify": "^1.0.0",
+    "grunt-coffeeify": "^0.1.3"
+  },
   "browserify": {
     "transform": [
       "reactify"
