--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bower": "^1.3.12",
     "browserify": "^7.1.0",
     "cloudinary": "^1.1.2",
+    "coffeeify": "^1.0.0",
     "compression": "^1.3.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
@@ -28,6 +29,7 @@
     "grunt-browserify": "^3.2.0",
     "grunt-bump": "^0.3.0",
     "grunt-cli": "^0.1.13",
+    "grunt-coffeeify": "^0.1.3",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-contrib-watch": "~0.6.1",
@@ -61,11 +63,10 @@
     "serve-favicon": "~2.1.3",
     "set-cookie": "0.0.4",
     "superagent": "^0.21.0",
+    "swig": "^1.4.2",
     "time-grunt": "~0.3.2",
     "uuid": "^2.0.1",
-    "watchify": "^0.10.2",
-    "coffeeify": "^1.0.0",
-    "grunt-coffeeify": "^0.1.3"
+    "watchify": "^0.10.2"
   },
   "browserify": {
     "transform": [
