--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "fontawesome": "~4.2.0",
     "nouislider": "~7.0.10",
     "gsap": "~1.16.1",
-    "modernizr": "~2.8.3"
+    "modernizr": "~2.8.3",
+    "blueimp-gallery": "~2.15.2"
   },
   "resolutions": {
     "jquery": "~2.1.1"
