--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express-state": "^1.2.0",
     "flux-router-component": "^0.6.1",
     "fluxible": "^0.4.3",
+    "fluxible-action-utils": "^0.2.1",
+    "fluxible-plugin-hairfie-api": "^0.1.0",
     "fluxible-plugin-routr": "^0.3.0",
     "grunt": "~0.4.5",
     "grunt-browserify": "^3.2.0",
