--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "flux-router-component": "^0.6.1",
     "fluxible": "^0.4.3",
     "fluxible-action-utils": "^0.2.1",
+    "fluxible-plugin-google-maps": "^0.1.1",
     "fluxible-plugin-hairfie-api": "^0.1.0",
     "fluxible-plugin-routr": "^0.3.0",
     "grunt": "~0.4.5",
