--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "debug": "~2.0.0",
     "envify": "^3.2.0",
     "express": "~4.9.0",
-    "express-state": "^1.2.0",
     "flux-router-component": "^0.6.1",
     "fluxible": "^0.4.3",
     "fluxible-action-utils": "^0.2.1",
+    "fluxible-plugin-config": "^0.1.0",
     "fluxible-plugin-google-maps": "^0.1.1",
     "fluxible-plugin-hairfie-api": "^0.1.0",
     "fluxible-plugin-routr": "^0.3.0",
