--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
     "debug": "~2.0.0",
     "envify": "^3.2.0",
     "express": "~4.9.0",
-    "flux-router-component": "^0.6.1",
     "fluxible": "^0.4.3",
     "fluxible-action-utils": "^0.2.1",
     "fluxible-plugin-config": "^0.1.0",
     "fluxible-plugin-google-maps": "^0.1.1",
     "fluxible-plugin-hairfie-api": "^0.1.0",
-    "fluxible-plugin-routr": "^0.3.0",
+    "fluxible-router": "^0.1.3",
     "grunt": "~0.4.5",
     "grunt-browserify": "^3.2.0",
     "grunt-bump": "^0.3.0",
@@ -55,14 +54,13 @@
     "q": "^1.0.1",
     "qs": "^2.3.3",
     "query-string": "^1.0.0",
-    "react": "^0.13.1",
+    "react": "^0.13.3",
     "react-bootstrap": "^0.13.3",
     "react-google-analytics": "^0.2.0",
     "react-intl": "^1.0.1",
     "reactify": "^0.17.1",
     "request": "~2.36.0",
     "robots.txt": "^1.1.0",
-    "routr": "^0.1.0",
     "serve-favicon": "~2.1.3",
     "set-cookie": "0.0.4",
     "superagent": "^0.21.0",
