--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "node ./server.js",
     "postinstall": "npm run bower && npm run build",
     "bower": "bower install",
-    "build": "grunt build"
+    "build": "grunt build",
+    "dev": "grunt"
   },
   "dependencies": {
     "bower": "^1.3.12",
+    "brfs": "^1.4.0",
     "browserify": "^7.1.0",
     "cloudinary": "^1.1.2",
     "coffeeify": "^1.0.0",
