--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fluxible-plugin-google-maps": "^0.1.1",
     "fluxible-plugin-hairfie-api": "^0.1.0",
     "fluxible-router": "^0.1.3",
+    "google-libphonenumber": "^0.2.2",
     "grunt": "~0.4.5",
     "grunt-browserify": "^3.2.0",
     "grunt-bump": "^0.3.0",
