--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "fluxible-plugin-cookie": "^0.2.1",
     "fluxible-plugin-facebook": "^0.1.2",
     "fluxible-plugin-google-maps": "^0.1.1",
-    "fluxible-plugin-hairfie-api": "^0.1.0",
+    "fluxible-plugin-hairfie-api": "git://github.com/Hairfie/fluxible-plugin-hairfie-api#master",
     "fluxible-router": "^0.1.3",
     "grunt": "~0.4.5",
     "grunt-browserify": "^3.2.0",
