--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "~4.13.3",
     "fluxible": "^0.5.1",
     "fluxible-action-utils": "^0.2.1",
+    "fluxible-addons-react": "^0.1.6",
     "fluxible-plugin-config": "^0.1.0",
     "fluxible-plugin-cookie": "^0.2.1",
     "fluxible-plugin-facebook": "^0.1.2",
@@ -32,46 +33,46 @@
     "fluxible-plugin-hairfie-api": "git://github.com/Hairfie/fluxible-plugin-hairfie-api#master",
     "fluxible-router": "^0.2.1",
     "grunt": "~0.4.5",
-    "grunt-browserify": "^4.0.0",
+    "grunt-browserify": "^3.2.0",
     "grunt-bump": "^0.3.0",
     "grunt-cli": "^0.1.13",
     "grunt-coffeeify": "^0.1.3",
-    "grunt-concurrent": "^2.0.1",
+    "grunt-concurrent": "^1.0.0",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-nodemon": "^0.4.0",
-    "grunt-react": "^0.12.2",
-    "grunt-sass": "^1.0.0",
+    "grunt-react": "^0.10.0",
+    "grunt-sass": "^0.18.0",
     "grunt-watchify": "git://github.com/goodeggs/grunt-watchify#release",
     "i18n": "^0.5.0",
-    "intl": "^1.0.0",
-    "load-grunt-tasks": "~3.2.0",
+    "intl": "^0.1.4",
+    "load-grunt-tasks": "~0.6.0",
     "lodash": "^3.6.0",
-    "lodash-contrib": "^393.0.1",
+    "lodash-contrib": "^241.4.14",
     "moment": "^2.8.4",
-    "moment-range": "^2.0.3",
-    "morgan": "~1.6.1",
+    "moment-range": "^1.0.5",
+    "morgan": "~1.3.0",
     "newrelic": "^1.17.0",
-    "node-jsx": "^0.13.3",
-    "node-sass": "^3.2.0",
-    "proxy-middleware": "^0.13.1",
+    "node-jsx": "^0.12.0",
+    "node-sass": "^2.0.1",
+    "proxy-middleware": "^0.7.0",
     "q": "^1.0.1",
-    "qs": "^4.0.0",
-    "query-string": "^2.4.0",
+    "qs": "^2.3.3",
+    "query-string": "^1.0.0",
     "react": "^0.13.3",
     "react-bootstrap": "^0.24.3",
     "react-google-analytics": "^0.2.0",
     "react-intl": "^1.0.1",
-    "reactify": "^1.1.1",
-    "request": "~2.60.0",
+    "reactify": "^0.17.1",
+    "request": "~2.36.0",
     "robots.txt": "^1.1.0",
-    "serve-favicon": "~2.3.0",
+    "serve-favicon": "~2.1.3",
     "set-cookie": "0.0.4",
-    "superagent": "^1.3.0",
+    "superagent": "^0.21.0",
     "swig": "^1.4.2",
-    "time-grunt": "~1.2.1",
+    "time-grunt": "~0.3.2",
     "uuid": "^2.0.1",
-    "watchify": "^3.3.1"
+    "watchify": "^0.10.2"
   },
   "browserify": {
     "transform": [
