--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "robots.txt": "^1.1.0",
     "serve-favicon": "~2.3.0",
     "set-cookie": "0.0.4",
+    "sitemap": "^1.4.0",
     "superagent": "^1.3.0",
     "swig": "^1.4.2",
     "time-grunt": "~1.2.1",
