--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "Website",
   "version": "0.2.2",
   "engines": {
-    "node": "5.1.x"
+    "node": "5.1.x",
+    "npm": "3.3.x"
   },
   "private": true,
   "scripts": {
