git pull + react-tooltip

--- a/package.json
+++ b/package.json
@@ -62,13 +62,14 @@
     "qs": "^6.0.1",
     "query-string": "^3.0.0",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3",
     "react-bootstrap": "^0.28.1",
+    "react-dom": "^0.14.3",
     "react-google-analytics": "^0.2.0",
     "react-intl": "^1.0.1",
-    "react-notification-system": "^0.2.6",
     "react-modal": "dinodsaurus/react-modal",
+    "react-notification-system": "^0.2.6",
     "react-select": "^0.6.8",
+    "react-tooltip": "^0.9.0",
     "reactify": "^1.1.1",
     "request": "~2.67.0",
     "robots.txt": "^1.1.0",
