--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bower": "^1.3.12",
     "browserify": "^12.0.1",
+    "classnames": "^2.2.1",
     "cloudinary": "^1.1.2",
     "coffeeify": "^1.0.0",
     "compression": "^1.3.0",
