--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bump": "grunt bump"
   },
   "dependencies": {
+    "babel-polyfill": "^6.3.14",
     "bower": "^1.3.12",
     "browserify": "^12.0.1",
     "classnames": "^2.2.1",
