--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "fluxible-action-utils": "^0.2.1",
     "fluxible-addons-react": "^0.2.0",
     "fluxible-plugin-config": "^0.1.0",
-    "fluxible-plugin-cookie": "^0.2.1",
+    "fluxible-plugin-cookie": "git://github.com/Hairfie/fluxible-plugin-cookie#master",
     "fluxible-plugin-facebook": "^0.1.2",
     "fluxible-plugin-google-maps": "^0.1.1",
     "fluxible-plugin-hairfie-api": "git://github.com/Hairfie/fluxible-plugin-hairfie-api#master",
