--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-select": "^0.6.8",
     "react-tooltip": "^0.9.0",
     "react-validation-mixin": "^5.3.4",
+    "react-validatorjs-strategy": "^0.1.10",
     "reactify": "^1.1.1",
     "request": "~2.67.0",
     "robots.txt": "^1.1.0",
