--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-fittext": "^0.1.1",
+    "react-geosuggest": "^1.21.0",
     "react-google-analytics": "^0.2.0",
     "react-intl": "^1.0.1",
     "react-modal": "dinodsaurus/react-modal",
