--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grunt-react": "^0.12.2",
     "grunt-sass": "^1.0.0",
     "grunt-watchify": "git://github.com/goodeggs/grunt-watchify#release",
+    "grunt-yui-compressor": "^0.4.0",
     "http-proxy-middleware": "^0.13.0",
     "i18n": "^0.5.0",
     "intl": "^1.0.0",
