--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "qs": "^6.0.1",
     "query-string": "^3.0.0",
     "react": "^0.14.3",
+    "react-autosuggest": "^3.7.3",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-fittext": "^0.1.1",
